--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage("apply"){
             steps{
-                as "terraform apply --auto-approve"
+                sh "terraform apply --auto-approve"
             }
 
         }
