--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,12 @@
 pipeline {
     agent any
     parameters{
-        choice{
+        choice (
             name: 'action'
             choices: 'init\napply\ndestroy'
             description: 'pls metion which do you wish to perform on terraform'
 
-        }
+        )
     }
     stages {
         stage("init"){
