--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         )
     }
     stages {
-        stage("init"){
+        stage('init'){
             when{
                 expression{
                     params.action == 'init'
@@ -20,7 +20,7 @@ pipeline {
                 sh "ls -la"
             }
         }
-        stage("apply"){
+        stage('apply'){
             when{
                 expression{
                     params.action == 'apply'
@@ -32,7 +32,7 @@ pipeline {
             }
 
         }
-        stage("destroy"){
+        stage('destroy'){
             when{
                 expression{
                     params.choice == 'destroy'
